--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -57,10 +57,10 @@
     <footer class="footer">
 
         <ul class="footer-list">
-            <li >Telefono: 11 2852-0894</li>
-            <li >Email: lautarodsan03@gmail.com</li>
-            <li >Horarios: Lunes a Viernes 11:00hs a 19:00hs. Sabados 9:00hs a 12:00hs</li>
-            <li>Instagram: poterryslove</li>
+            <li class="list-text">Telefono: 11 2852-0894</li>
+            <li class="list-text">Email: lautarodsan03@gmail.com</li>
+            <li class="list-text">Horarios: Lunes a Viernes 11:00hs a 19:00hs. Sabados 9:00hs a 12:00hs</li>
+            <li class="list-text">Instagram: poterryslove</li>
         </ul>
         
     </footer>
