--- a/pages/productos-personalizados.html
+++ b/pages/productos-personalizados.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Productos personalizados - Pottery love</title>
+    <title> Productos personalizados - Pottery's love centa de ceramica</title>
     <link rel="shortcut icon" href="../images/WhatsApp Image.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../css/bootstrap.min.css"> 
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/stilos.css">
 </head>
 
 <body Class="fondo">
 
-    <header>
+    <header class="header">
         <nav class="navbar navbar-expand-lg bg-body-tertiary" id="header-4">
             <div class="container-fluid">
               <a class="navbar-brand" href="../index.html">POTTERY LOVE</a>
@@ -32,27 +32,27 @@
     </header>
 
     <main >
+<div class="container parrafos">
 
-        <p class="parrafo-2">
-            Ademas de los productos ofrecidos tambien tomamos pedidos personalizados. Para un pedido personalizado contactame por cualquiera de mis redes sociales.
-        </p>
+    <p class="parrafo-2">
+      Ademas de los productos ofrecidos tambien tomamos pedidos personalizados.
+    </p>
+    <p class="parrafo-3">
+      Para un pedido personalizado contactame por cualquiera de mis redes sociales.
+    </p>
 
-        <div class="img">
-            <img src="../images/WhatsApp Image 2023-09-14 at 16.21.23.jpg" alt="mujer creando una pieza de ceramica" class="img" >
-        </div>
-        
+  </div>
+            <img class="img" src="../images/WhatsApp Image 2023-09-14 at 16.21.23.jpg" alt="mujer creando una pieza de ceramica" class="img" >
     </main>
 
     <footer class="footer">
-
-        <ul class="footer-list">
-            <li class="list-text">Telefono: 11 2852-0894</li>
-            <li class="list-text">Email: lautarodsan03@gmail.com</li>
-            <li class="list-text">Horarios: Lunes a Viernes 11:00hs a 19:00hs. Sabados 9:00hs a 12:00hs</li>
-            <li class="list-text">Instagram: poterryslove</li>
-        </ul>
-        
-    </footer>
+      <ul class="footer-list">
+          <li class="list-text">Telefono: 11 2852-0894</li>
+          <li class="list-text">Email: lautarodsan03@gmail.com</li>
+          <li class="list-text">Horarios: Lunes a Viernes 11:00hs a 19:00hs. Sabados 9:00hs a 12:00hs</li>
+          <li class="list-text">Instagram: @poterryslove</li>
+      </ul>
+  </footer>
     <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
